updating docs